--- a/mrp_cost/views/mrp_bom_view.xml
+++ b/mrp_cost/views/mrp_bom_view.xml
@@ -47,6 +47,7 @@
                 </xpath>
                 <xpath expr="//field[@name='bom_line_ids']//tree/field[@name='product_qty']" position="attributes">
                     <attribute name="attrs">{'readonly': [('coefficent_parameters', '!=', False)]}</attribute>
+                    <attribute name="force_save">1</attribute>
                 </xpath>
             </field>
         </record> 
